--- a/sunline/users/templates/users/profile.html
+++ b/sunline/users/templates/users/profile.html
@@ -90,9 +90,12 @@
                                                         {% include "cart/includes/included_cart.html" %}
                                                         <!-- Закончилась разметка корзины -->
                                                     </div>
+                                                    {% if carts %}
                                                     <a class="btn btn-dark" href="../orders/create_order.html">
-                                                        Оформить заказ
+                                                        Checkout
                                                     </a>
+                                                    {% endif %}
+
                                                 </div>
                                             </div>
 
