--- a/sunline/cart/templates/carts/includes/included_cart.html
+++ b/sunline/cart/templates/carts/includes/included_cart.html
@@ -16,13 +16,17 @@
                         <div class="input-group">
                             <span class="input-group-btn">
                                 <button type="button" class="btn btn-dark btn-sm decrement"
-                                    data-cart-id="" data-cart-change-url="">-</button>
+                                    data-cart-id=" {{cart.id}} " data-cart-change-url=" {% url 'cart:cart_change' %} ">
+                                    {% csrf_token %}
+                                    -</button>
                             </span>
                             <input type="text" class="form-control number" value=" {{cart.quantity}} "
                                 readonly>
                             <span class="input-group-btn">
                                 <button type="button" class="btn btn-dark btn-sm increment"
-                                    data-cart-id="" data-cart-change-url="">+</button>
+                                    data-cart-id=" {{cart.id}} " data-cart-change-url=" {% url 'cart:cart_change' %} ">
+                                    {% csrf_token %}
+                                    +</button>
                             </span>
                         </div>
                     </div>
@@ -31,7 +35,10 @@
                     </div>
                     <div class="col p-0"><strong> {{cart.products_price}} $</strong></div>
                     <div class="col p-0">
-                        <a href=" {% url 'cart:cart_remove' cart.id %} ">
+                        <a class="remove-from-cart" href=" {% url 'cart:cart_remove' %} "
+                        data-cart-id=" {{cart.id}} "
+                        >
+                        {% csrf_token %}
                             <img src=" {% static 'deps/icons/trash.svg' %} " alt="">
                         </a>
                     </div>
