--- a/sunline/users/templates/users/users_cart.html
+++ b/sunline/users/templates/users/users_cart.html
@@ -16,7 +16,7 @@
                     <!-- Закончилась разметка корзины -->
                 </div>
                 {% if carts %}
-                <a class="btn btn-dark" href="../orders/create_order.html">
+                <a class="btn btn-dark" href=" {% url 'orders:create_order' %} ">
                     Checkout
                 </a>
                 {% endif %}
