--- a/sunline/users/templates/users/profile.html
+++ b/sunline/users/templates/users/profile.html
@@ -82,7 +82,7 @@
 
 
              <!-- Корзина -->                               
-            <div class="cart">
+            <div class="profile-cart">
                 <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                     <h3 class="cart__title">Cart</h3>
                     <div class="container" id="cart-items-container">
