--- a/sunline/users/templates/users/users_cart.html
+++ b/sunline/users/templates/users/users_cart.html
@@ -5,23 +5,45 @@
 
 
 {% block block__content %}
-<div class="row">
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
-                <h3 class="text-center mb-4">Cart</h3>
-                <div class="container" id="cart-items-container">
-                    <!-- Разметка корзины -->
-                    {% include "carts/includes/included_cart.html" %}
-                    <!-- Закончилась разметка корзины -->
+<section class="top">
+    <div class="top__container" style="background-image: url(' {% static 'deps/images/bg-breadcrumbs.webp' %} ');">
+      <div class="container">
+        <h2 class="top__title title">Your Cart</h2>
+        <div class="breadcrumbs">
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="#">Cart</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="#">Cart page</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+<div class="cart">
+
+    <div class="container">
+        <div class="">
+            <div class="">
+                <div class="">
+                    <div class="" id="cart-items-container">
+                        <!-- Разметка корзины -->
+                        {% include "carts/includes/included_cart.html" %}
+                        <!-- Закончилась разметка корзины -->
+                    </div>
+                    {% if carts %}
+                    <a class="btn btn-dark cart__checkout-btn" href=" {% url 'orders:create_order' %} ">
+                        Checkout
+                    </a>
+                    {% endif %}
                 </div>
-                {% if carts %}
-                <a class="btn btn-dark" href=" {% url 'orders:create_order' %} ">
-                    Checkout
-                </a>
-                {% endif %}
             </div>
         </div>
     </div>
+
 </div>
 {% endblock block__content %}
