fixed wishlist; fixed header

--- a/sunline/templates/base.html
+++ b/sunline/templates/base.html
@@ -3,8 +3,11 @@
 
 {% load carts_tags %}
 
+{% load wishlists_tags %}
+
 {% user_carts request as carts  %}
 
+{% user_wishlists request as wishlists  %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -34,7 +37,12 @@
                             <a class="menu__list-link" href=" {% url "main:index" %}">Home</a>
                         </li>
                         <li class="menu__list-item menu__list-item--dropdown">
-                            <a class="menu__list-link menu__list-link--dropdown" href="#">Products</a>
+                            <a class="menu__list-link menu__list-link--dropdown__products" href="#">
+                                Products
+                                <svg width="22px" height="22px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#fff"/>
+                                </svg>
+                            </a>
                             <ul class="submenu">
                                 {% tag_categories as categories %}
                                 {% for category in categories %}
@@ -70,22 +78,22 @@
                                 </form>
                             </div>
                         </li>
-                        <li class="menu__list-item menu__list-link--dropdown">
-                            <a class="menu__list-link" href="">
+                        <li class="menu__list-item menu__list-item--dropdown">
+                            <a class="menu__list-link menu__list-link--dropdown__user" href="">
                                 <img src=" {% static 'deps/icons/user.svg' %} " alt="">
                             </a>
                             <ul class="submenu">
                                 {% if not user.is_authenticated %}
                                     <li class="submenu__item">
-                                        <a class="submenu__item-link" href="{% url "user:login" %}">Войти</a>
+                                        <a class="submenu__link" href="{% url "user:login" %}">Login</a>
                                     </li>
                                 {% else %}
 
-                        <li class="submenu__item"><a class="submenu__item-link" href="{% url "user:profile" %}">Личный кабинет</a></li>
+                        <li class="submenu__item"><a class="submenu__link" href="{% url "user:profile" %}">Personal Account</a></li>
                         {% if user.is_admin or user.is_staff %}
-                            <li class="submenu__item"><a class="submenu__item-link" href="{% url "admin:index" %}">Админ панель</a></li>
+                            <li class="submenu__item"><a class="submenu__link" href="{% url "admin:index" %}">Admin Panel</a></li>
                         {% endif %}
-                        <li class="submenu__item"><a class="submenu__item-link" href="{% url "user:logout" %}">Выйти</a></li>
+                        <li class="submenu__item"><a class="submenu__link" href="{% url "user:logout" %}">Logout</a></li>
                     {% endif %}
                     </li>
                 </ul>
