--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -128,13 +128,48 @@ body {
   display: block;
 }
 
+.submenu__link:hover {
+  color: #F94073;
+}
+
 .submenu__link,
 .submenu__item {
+  color: #2d3054;
   padding: 10px 20px;
   background-color: #fff;
   display: block;
   z-index: 5;
+  transition: all .3s;
 }
+
+.menu__list-link--dropdown__products  {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu__list-link--dropdown__products:hover path {
+  fill: #F94073;
+}
+
+/* .menu__list-link--dropdown__products {
+  position: relative;
+  padding-right: 15px;
+} 
+
+.menu__list-link--dropdown__products::after {
+  position: absolute;
+  content: '';
+  background-image: url('../icons/dropdown-arrow.svg');
+  top: 8px;
+  left: 86px;
+  right: -69px;
+  bottom: 0;
+  background-repeat: no-repeat;
+} */
+
+
+
 
 .menu__list .menu__list-item:hover>.submenu {
   opacity: 1;
@@ -166,17 +201,17 @@ body {
   position: absolute;
   min-width: 20px;
   height: 20px;
-  line-height: 20px;
+  line-height: 19px;
   padding: 0 2px;
-  font-size: 92.307%;
-  text-align: center;
-  top: 24px;
-  left: -5px;
+  font-size: 18px;
+  top: -5px;
+  left: 24px;
   border-radius: 10px;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
   background-color: #F94073;
   color: #f8f9fa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -1371,7 +1406,7 @@ body {
 
 
 .add-to-cart {
-  appearance: none;
+  /* appearance: none;
   backface-visibility: hidden;
   background-color: #ff6f00;
   border-radius: 10px;
@@ -1392,7 +1427,7 @@ body {
   text-align: center;
   text-decoration: none;
   transform: translate3d(0, 0, 0);
-  transition: all .3s;
+  transition: all .3s; */
 }
 
 
@@ -1443,21 +1478,26 @@ body {
   margin: 0;
 }
 
-.single-product-btn {
-  background: #F94073;
-  color: #fff;
-  border-radius: 23px;
-  border: none;
-  font-weight: 500;
-  text-transform: unset;
-  transition: 1s;
-  box-shadow: inset 0 0 #ffffff1a;
-  padding: 0;
-  text-transform: capitalize;
-  width: 200px;
-  padding: 10px 18px;
-  cursor: pointer;
+.product__btns-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
 
+.single-product-btn {
+  background-color: #2d3054;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  line-height: 40px;
+  border: none;
+  transition: .4s;
+  border-radius: 50%;
+  display: block;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .single-product-tabs__container {
