--- a/sunline/goods/templates/goods/product.html
+++ b/sunline/goods/templates/goods/product.html
@@ -65,26 +65,26 @@
                 <div class="single-product__description">
                     {{product.description}}
                 </div>
+                <div class="product__btns-container">
 
-                <a class="single-product-btn btn add-to-wishlist" href="{% url 'wishlist:wishlist_add' %}"
-                data-product-id=" {{product.id}} "
-                >
-                {% csrf_token %}
-                <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-                <svg width="28px" height="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M15.7 4C18.87 4 21 6.98 21 9.76C21 15.39 12.16 20 12 20C11.84 20 3 15.39 3 9.76C3 6.98 5.13 4 8.3 4C10.12 4 11.31 4.91 12 5.71C12.69 4.91 13.88 4 15.7 4Z" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                </a>
+                    <a class="product__cart-btn btn add-to-cart" href="{% url 'cart:cart_add' %}"
+                    data-product-id=" {{product.id}} "
+                    >
+                    {% csrf_token %}
+                    Buy Now
+                    </a>
 
-                <a class="single-product-btn btn add-to-cart" href="{% url 'cart:cart_add' %}"
-                data-product-id=" {{product.id}} "
-                >
-                {% csrf_token %}
-                <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-                <svg width="28px" height="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M14 2C14 1.44772 13.5523 1 13 1C12.4477 1 12 1.44772 12 2V8.58579L9.70711 6.29289C9.31658 5.90237 8.68342 5.90237 8.29289 6.29289C7.90237 6.68342 7.90237 7.31658 8.29289 7.70711L12.2929 11.7071C12.6834 12.0976 13.3166 12.0976 13.7071 11.7071L17.7071 7.70711C18.0976 7.31658 18.0976 6.68342 17.7071 6.29289C17.3166 5.90237 16.6834 5.90237 16.2929 6.29289L14 8.58579V2ZM1 3C1 2.44772 1.44772 2 2 2H2.47241C3.82526 2 5.01074 2.90547 5.3667 4.21065L5.78295 5.73688L7.7638 13H18.236L20.2152 5.73709C20.3604 5.20423 20.9101 4.88998 21.4429 5.03518C21.9758 5.18038 22.29 5.73006 22.1448 6.26291L20.1657 13.5258C19.9285 14.3962 19.1381 15 18.236 15H8V16C8 16.5523 8.44772 17 9 17H16.5H18C18.5523 17 19 17.4477 19 18C19 18.212 18.934 18.4086 18.8215 18.5704C18.9366 18.8578 19 19.1715 19 19.5C19 20.8807 17.8807 22 16.5 22C15.1193 22 14 20.8807 14 19.5C14 19.3288 14.0172 19.1616 14.05 19H10.95C10.9828 19.1616 11 19.3288 11 19.5C11 20.8807 9.88071 22 8.5 22C7.11929 22 6 20.8807 6 19.5C6 18.863 6.23824 18.2816 6.63048 17.8402C6.23533 17.3321 6 16.6935 6 16V14.1339L3.85342 6.26312L3.43717 4.73688C3.31852 4.30182 2.92336 4 2.47241 4H2C1.44772 4 1 3.55228 1 3ZM16 19.5C16 19.2239 16.2239 19 16.5 19C16.7761 19 17 19.2239 17 19.5C17 19.7761 16.7761 20 16.5 20C16.2239 20 16 19.7761 16 19.5ZM8 19.5C8 19.2239 8.22386 19 8.5 19C8.77614 19 9 19.2239 9 19.5C9 19.7761 8.77614 20 8.5 20C8.22386 20 8 19.7761 8 19.5Z" fill="#fff"/>
-                </svg>
-                </a>
+                    
+                    <a class="product__wishlist-btn btn add-to-wishlist" href="{% url 'wishlist:wishlist_add' %}"
+                    data-product-id=" {{product.id}} "
+                    >
+                    {% csrf_token %}
+                    <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+                    <svg width="28px" height="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.7 4C18.87 4 21 6.98 21 9.76C21 15.39 12.16 20 12 20C11.84 20 3 15.39 3 9.76C3 6.98 5.13 4 8.3 4C10.12 4 11.31 4.91 12 5.71C12.69 4.91 13.88 4 15.7 4Z" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -132,24 +132,17 @@
 
 
             {% for review in reviews %}
-            <div class="single-comment justify-content-between d-flex mb-30">
-                <div class="user justify-content-between d-flex">
-                    <div class="thumb text-center">
-                        <img src="assets/imgs/blog/author-2.png" alt="" />
-                        <a href="#" class="font-heading text-brand"> {{review.user.username|title}} </a>
-                    </div>
-                    <div class="desc">
-                        <div class="d-flex justify-content-between mb-10">
-                            <div class="d-flex align-items-center">
-                                <span class="font-xs text-muted"> {{review.date|date:"d M, Y"}} </span>
-                            </div>
-                            <div class="">
-                                {% comment %} {% for star in reveiw.rating|ljust:review.rating %} {% endcomment %}
-                                <i class="fas fa-star text-warning"> </i>
-                               
-                            </div>
+            <div class="single-comment ">
+                <div class="user single-comment__item ">
+                    <div class="thumb single-comment__info">
+                        <img class="single-comment__user-image" src=" {{review.user.image.url}} " alt="" />
+                        <h3 class="single-comment__author"> {{review.user.username|title}} </h3>
+                        <div class="">
+                            <p class="single-comment__date"> {{review.date|date:"d M, Y"}} </p>
                         </div>
-                        <p class="mb-10"> {{review.review}} </p>
+                    </div>
+                    <div class="single-comment__text desc">
+                        <p class=""> {{review.review}} </p>
                     </div>
                 </div>
             </div>
@@ -159,26 +152,26 @@
 
 
             <div class="comment-form">
-                <h4 class="mb-15 add-review">Add a review</h4>
+                <h4 class="comment-form__title add-review">Add a review</h4>
                 <strong class="text-success" id="review-res" ></strong>
-                <div class="product-rate d-inline-block mb-30"></div>
+                <div class="product-rate"></div>
                 <div class="row">
-                    <div class="col-lg-8 col-md-12">
+                    <div class="">
                         <form class="form-contact comment_form hide-comment-form " action=" {% url "catalog:ajax-add-review" product.id %} " id="commentForm" method="POST" >
                             {% csrf_token %}
                             <div class="row">
-                                <div class="col-12">
-                                    <div class="form-group">
+                                <div class="">
+                                    <div class="comment-form__textarea form-group">
                                         {{review_form.review}}
                                     </div>
                                 </div>
-                                <div class="col-12">
+                                <div class="">
                                     <div class="form-group">
                                         {% comment %} {{review_form.rating}} {% endcomment %}
                                     </div>
                                 </div>
                             <div class="form-group">
-                                <button type="submit" class="button button-contactForm">Submit Review</button>
+                                <button type="submit" class="comment-form__button button button-contactForm">Submit Review</button>
                             </div>
                         </form>
                     </div>
